Fix display issue with weapons being cut off when 4 are released at once

--- a/src/css/screenshots.scss
+++ b/src/css/screenshots.scss
@@ -50,7 +50,7 @@
         transform: scale(1.4);
     }
 
-    .new-weapon {
+    .new-weapons-large {
         transform: scale(1.25);
     }
 
